# django_demo

./: .env.example  .gitignore  example.py  manage.py  pyproject.toml  readme.md  requirements.txt  start.sh
apps/collectlog/: admin.py  apps.py  models.py  serializers.py  views.py
apps/news/: admin.py  models.py  serializers.py  views.py
apps/news/migrations/: 0001_initial.py
apps/news_others/: admin.py  apps.py  models.py  serializers.py  views.py
client/: example_settings.py
collectLog/: admin.py  apps.py  models.py  serializers.py  views.py
dj_server/: asgi.py  settings.py  urls.py  views.py  wsgi.py
gd_dp/: admin.py  apps.py  models.py  serializers.py  views.py
templates/TyAdmin/: index.html
tyadmin/: package-lock.json
tyadmin/config/: routes.js
tyadmin/src/.umi/: umi.ts
tyadmin/src/.umi/core/: history.ts  plugin.ts  routes.ts
tyadmin/src/.umi/plugin-dva/: connect.ts  dva.ts  exports.ts
tyadmin/src/.umi/plugin-helmet/: exports.ts
tyadmin/src/.umi/plugin-locale/: localeExports.ts
tyadmin/src/.umi/plugin-model/: Provider.tsx  useModel.tsx
tyadmin/src/.umi/plugin-request/: request.ts
tyadmin/src/pages/AutoGenPage/CaptchaStoreList/: index.jsx  service.js
tyadmin/src/pages/AutoGenPage/CaptchaStoreList/components/: CreateForm.jsx  UpdateForm.jsx
tyadmin/src/pages/AutoGenPage/CollectLogList/: index.jsx  service.js
tyadmin/src/pages/AutoGenPage/CollectLogList/components/: CreateForm.jsx  UpdateForm.jsx
tyadmin/src/pages/AutoGenPage/NewsList/: index.jsx  service.js
tyadmin/src/pages/AutoGenPage/NewsList/components/: CreateForm.jsx  UpdateForm.jsx
tyadmin/src/pages/AutoGenPage/TyAdminEmailVerifyRecordList/: index.jsx  service.js
tyadmin/src/pages/AutoGenPage/TyAdminEmailVerifyRecordList/components/: CreateForm.jsx  UpdateForm.jsx
tyadmin/src/pages/AutoGenPage/TyAdminSysLogList/: index.jsx  service.js
tyadmin/src/pages/AutoGenPage/UserList/: index.jsx
tyadmin_api/: auto_filters.py  auto_serializers.py  auto_url.py  auto_views.py  menu.json
